# ticketly

./: ARCHITECTURE.md  Anchor.toml  README.md  package.json
programs/solentry/: Cargo.toml
programs/solentry/src/: constants.rs  errors.rs  lib.rs  security.rs
programs/solentry/src/contexts/: buy_ticket.rs  cancel_listing.rs  check_in_ticket.rs  create_event.rs  list_ticket.rs  manage_operators.rs  mint_ticket.rs  transfer_ticket.rs  update_event.rs
programs/solentry/src/instructions/: check_in_ticket.rs  create_event.rs  init_organizer.rs  init_platform.rs  list_ticket.rs  manage_operators.rs  mint_poap.rs  mint_pops.rs  mint_ticket.rs  mod.rs  transfer_ticket.rs  update_event.rs
programs/solentry/src/state/: event.rs  marketplace.rs  mod.rs  organizer.rs  ticket.rs  whitelist.rs
programs/solentry/src/utils/: mod.rs  nft.rs  validation.rs
programs/ticketly/: Cargo.toml
programs/ticketly/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/ticketly/src/contexts/: check_in_ticket.rs  mint_ticket.rs  mod.rs  refund_ticket.rs  update_event.rs
programs/ticketly/src/instructions/: buy_ticket.rs  cancel_listing.rs  init_platform.rs  manage_whitelist.rs  mod.rs  refund_ticket.rs  withdraw_revenue.rs
programs/ticketly/src/state/: poap.rs  ticket.rs
tests/: solentry.ts  ticketly.ts
