[package]
name = "ticketly"
version = "0.1.0"
description = "Onchain Luma — tokenised event ticketing on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketly"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang  = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.32.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = "5.1.1"
    
[dev-dependencies]
anchor-lang = { version = "0.32.1" }